Fuoten 0.6.6 - 2019-05-06
- General
  * note: maintenance update for sixth preview release
  * fixed: article list is not updated (#52)
  * improved: translation updates

Fuoten 0.6.5 - 2019-04-30
- SailfishOS
  * note: maintenance update for sixth preview release
  * changed: hide articles with future publish date (#50)
  * changed: only hide web view settings when open in external browser has been selected (#51)
- General
  * new: Chinese (China) translation by Rui Kon

Fuoten 0.6.4 - 2018-12-04
- SailfishOS
  * note: maintenance update for sixth preview release
  * fixed: text that is too long destroys the layout (#43)
  * fixed: renaming dialogs are not accepted on enter key (#45)

Fuoten 0.6.3 - 2018-11-26
- SailfishOS
  * note: maintenance update for sixth preview release
  * new: support compressed server responses (gzip and deflate)
  * improved: use icons fitting the current screen pixel ratio
  * improved: add an option to disable the push up menu on article page and hide it by default
  * improved: set default request timeout to 300 seconds to improve reliability for long running
    remote actions like marking articles as read
  * fixed: mark all items as read (#40)
- General
  * new: French translation by Antoine Vacher

Fuoten 0.6.2 - 2017-11-06
- SailfishOS
  * note: maintenance update for sixth preview release
  * fixed: wrong association to startup wizard account page scroll decorator flickable property (#39)

Fuoten 0.6.1 - 2017-10-27
- SailfishOS
  * note: maintenance update for sixth preview release
  * improved: add cover action to copy article link to clipboard
  * improved: add share entry to article push up menu
  * fixed: initial synchronization fails (#38)

Fuoten 0.6.0 - 2017-10-27
- SailfishOS
  * note: sixth preview release
  * new: use notifications to notify about succeeded tasks and occuring errors (#36)
  * new: pseudo background updates that synchronize with the server activated by user interaction (#25)