@@ -7,8 +7,8 @@ CONFIG += c++14
 QT += sql network dbus
 
 VER_MAJ = 0
-VER_MIN = 6
-VER_PAT = 6
+VER_MIN = 7
+VER_PAT = 0
 
 VERSION = $${VER_MAJ}.$${VER_MIN}.$${VER_PAT}
 
